<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_image"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/sort_Alphabetically"
        android:icon="@drawable/ic_sort_alphabetically"
        android:title="@string/sort_alphabetically"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_image_from_device"
        android:icon="@drawable/ic_add_device_image"
        android:title="@string/add_image_from_device"
        app:showAsAction="never"/>

    <item
        android:id="@+id/add_image"
        android:icon="@drawable/ic_add_image"
        android:title="@string/add_image_from_internet"
        app:showAsAction="never" />

</menu>