<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--Dialog Title/Header-->
        <TextView
            android:id="@+id/dialogHeader"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add_image"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--ITEM INPUT ROOT (main)-->

        <!--Chosen Image ImageView-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_of_image"
            android:src="@drawable/ocean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogHeader" />


        <!--Layout for color chips-->

        <!--Choose Color TextView-->
        <TextView
            android:id="@+id/choosePaletteTitle"
            style="@style/CustomTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_a_palette_colour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <!--Color Chip Group-->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/colorChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choosePaletteTitle"
            app:singleSelection="true">

        </com.google.android.material.chip.ChipGroup>


        <!--Layout for label chips-->

        <!--Choose Label TextView-->
        <TextView
            android:id="@+id/chooseLabelTitle"
            style="@style/CustomTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_a_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorChips" />

        <!--Label Chip Group-->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/labelChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseLabelTitle"
            app:singleSelection="true">

        </com.google.android.material.chip.ChipGroup>

        <!--Custom Label EditText-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customLabelTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/label"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelChips">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customLabelET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Share Image Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/addBtn"
            app:layout_constraintTop_toBottomOf="@+id/customLabelTIL"
            app:layout_constraintEnd_toStartOf="@+id/addBtn" />


        <!--Add Image Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customLabelTIL" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>